--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-  "name": "colorist",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.2",
-    "vue": "^2.6.11",
-    "vuetify": "^2.3.7"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.4.6",
-    "@vue/cli-plugin-eslint": "^4.4.6",
-    "@vue/cli-service": "^4.4.6",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.2",
-    "vue-cli-plugin-vuetify": "^2.0.7",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.6.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+	"name": "colorist",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint"
+	},
+	"dependencies": {
+		"core-js": "^3.6.5",
+		"node-sass": "^4.14.1",
+		"sass-loader": "^9.0.3",
+		"vue": "^2.6.11",
+		"vuetify": "^2.3.8"
+	},
+	"devDependencies": {
+		"@vue/cli-plugin-babel": "^4.5.3",
+		"@vue/cli-plugin-eslint": "^4.5.3",
+		"@vue/cli-service": "^4.5.3",
+		"babel-eslint": "^10.1.0",
+		"eslint": "^7.7.0",
+		"eslint-plugin-vue": "^6.2.2",
+		"sass": "^1.26.10",
+		"sass-loader": "^9.0.3",
+		"serialize-javascript": ">=3.1.0",
+		"vue-cli-plugin-vuetify": "^2.0.7",
+		"vue-template-compiler": "^2.6.11",
+		"vuetify-loader": "^1.6.0"
+	},
+	"eslintConfig": {
+		"root": true,
+		"env": {
+			"node": true
+		},
+		"extends": [
+			"plugin:vue/essential",
+			"eslint:recommended"
+		],
+		"rules": {},
+		"parserOptions": {
+			"parser": "babel-eslint"
+		}
+	},
+	"postcss": {
+		"plugins": {
+			"autoprefixer": {}
+		}
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions"
+	]
 }
